Blender Crashes while changing Workspace Template after Load UI unchecked #56895

Closed
opened 2018-09-24 05:15:18 +02:00 by Judah King · 3 comments

System Information
Windows 10 Pro 64Bit
Intel(R) Core(TM) i3-4005U CPU @ 1.70GHz
Nvidia 820m
system-info.txt

Blender Version
Broken: 2.80 c3d46694e2
Worked: (optional)

Short description of error
Blender Crashes while changing Workspace Template after Load UI unchecked in User Preferences.

Exact steps for others to reproduce the error
Opened Blender
Unchecked "Load UI" under file menu in User Preferences. Then saved changes.
In the Main menu changed the workspace template from General to 2D Animation / VFX / Video Editing.
Blender Crashes

**System Information** Windows 10 Pro 64Bit Intel(R) Core(TM) i3-4005U CPU @ 1.70GHz Nvidia 820m [system-info.txt](https://archive.blender.org/developer/F4801701/system-info.txt) **Blender Version** Broken: 2.80 c3d46694e2 Worked: (optional) **Short description of error** Blender Crashes while changing Workspace Template after Load UI unchecked in User Preferences. **Exact steps for others to reproduce the error** Opened Blender Unchecked "Load UI" under file menu in User Preferences. Then saved changes. In the Main menu changed the workspace template from General to 2D Animation / VFX / Video Editing. Blender Crashes
Author

Added subscriber: @JoeRex

Added subscriber: @JoeRex

This issue was referenced by 8dfdd248b5

This issue was referenced by 8dfdd248b54b76c4a45db6f253398bc621142b42
Brecht Van Lommel self-assigned this 2018-09-24 15:43:09 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56895
No description provided.