Fix T56895: crash loading template with Load UI unchecked.